sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:11: error: illegal start of simple expression
			if (	 swapped = false );
                                                  ^